--- a/OpenBudgeteer.Blazor/Shared/NavMenu.razor
+++ b/OpenBudgeteer.Blazor/Shared/NavMenu.razor
@@ -46,12 +46,14 @@
                 </li>
             </ul>
         </div>
-	    <div class="col-md-auto">
+        <div class="col-md-auto">
             <div class="navbar-text" style="margin-right: 15px">
                 <span>
                     Database: @CurrentDatabase
                 </span>
             </div>
+        </div>
+        <div class="col-md-auto">
             <div class="navbar-text">
                 <span>
                     Version: 1.4 (<a href="https://github.com/TheAxelander/OpenBudgeteer/blob/master/CHANGELOG.md" target="_blank">Change Log</a>)
