--- a/OpenBudgeteer.Blazor/Pages/Import.razor
+++ b/OpenBudgeteer.Blazor/Pages/Import.razor
@@ -285,7 +285,7 @@
              <div class="modal-content">
                  <div class="modal-header">
                      <h4 class="modal-title">Import Transactions</h4>
-                     <button type="button" class="close" data-dismiss="modal" @onclick="@(() => _isConfirmationModalDialogVisible = false)">&times;</button>
+                     <button type="button" class="btn-close" data-dismiss="modal" @onclick="@(() => _isConfirmationModalDialogVisible = false)"></button>
                  </div>
                  <div class="modal-body">
                      @_importConfirmationMessage
