--- a/OpenBudgeteer.Blazor/Shared/EditBucketDialog.razor
+++ b/OpenBudgeteer.Blazor/Shared/EditBucketDialog.razor
@@ -7,7 +7,7 @@
              <div class="modal-content">
                  <div class="modal-header">
                      <h4 class="modal-title">@Title</h4>
-                     <button type="button" class="close" data-dismiss="modal" @onclick="OnCancelClickCallback">&times;</button>
+                     <button type="button" class="btn-close" data-dismiss="modal" @onclick="OnCancelClickCallback"></button>
                  </div>
                  <div class="modal-body">
                      <div class="form-group">
