Add missing bootstrap js files

--- a/OpenBudgeteer.Blazor/Pages/_Host.cshtml
+++ b/OpenBudgeteer.Blazor/Pages/_Host.cshtml
@@ -57,6 +57,7 @@
     </footer>
 
     <script src="_framework/blazor.server.js"></script>
+    <script src="js/bootstrap/bootstrap.bundle.min.js"></script>
 
     <!-- Reference the included moment.js javascript file. -->
     <script src="_content/ChartJs.Blazor/moment-with-locales.min.js" type="text/javascript" language="javascript"></script>
