--- a/OpenBudgeteer.Blazor/Pages/Rules.razor
+++ b/OpenBudgeteer.Blazor/Pages/Rules.razor
@@ -38,7 +38,7 @@
                 <td><input class="form-control form-control-sm number-input" type="number" @bind="_dataContext.NewRuleSet.RuleSet.Priority" /></td>
                 <td><input class="form-control form-control-sm" type="text" @bind="_dataContext.NewRuleSet.RuleSet.Name" /></td>
                 <td>
-                    <select class="form-control form-control-sm" style="background-color: @ColorTranslator.ToHtml(_dataContext.NewRuleSet.TargetBucket.Color)"
+                    <select class="form-select form-select-sm" style="background-color: @ColorTranslator.ToHtml(_dataContext.NewRuleSet.TargetBucket.Color)"
                             @onchange=@(e => HandleTargetBucketSelectionChanged(_dataContext.NewRuleSet, Convert.ToInt32(e.Value)))>
                         @foreach (var availableBucket in _dataContext.NewRuleSet.AvailableBuckets)
                         {
@@ -58,7 +58,7 @@
                     {
                         <div class="row align-items-center" style="margin-bottom: 5px 0">
                             <div class="col-md-auto">
-                                <select class="form-control form-control-sm"
+                                <select class="form-select form-select-sm"
                                         @onchange=@(e => mappingRule.MappingRule.ComparisionField = Convert.ToInt32(e.Value))>
                                     @for (int i = 1; i <= 4; i++)
                                     {
@@ -74,7 +74,7 @@
                                 </select>
                             </div>
                             <div class="col-md-auto">
-                                <select class="form-control form-control-sm"
+                                <select class="form-select form-select-sm"
                                         @onchange=@(e => mappingRule.MappingRule.ComparisionType = Convert.ToInt32(e.Value))>
                                     @for (int i = 1; i <= 4; i++)
                                     {
@@ -126,7 +126,7 @@
                 <td><input class="form-control form-control-sm number-input" type="number" @bind="ruleSet.RuleSet.Priority" /></td>
                 <td><input class="form-control form-control-sm" type="text" @bind="ruleSet.RuleSet.Name" /></td>
                 <td>
-                    <select class="form-control form-control-sm" style="background-color: @ColorTranslator.ToHtml(ruleSet.TargetBucket.Color)"
+                    <select class="form-select form-select-sm" style="background-color: @ColorTranslator.ToHtml(ruleSet.TargetBucket.Color)"
                             @onchange=@(e => HandleTargetBucketSelectionChanged(ruleSet, Convert.ToInt32(e.Value)))>
                         @foreach (var availableBucket in ruleSet.AvailableBuckets)
                         {
@@ -148,7 +148,7 @@
                     {
                         <div class="row align-items-center" style="margin-bottom: 5px 0">
                             <div class="col-md-auto">
-                                <select class="form-control form-control-sm"
+                                <select class="form-select form-select-sm"
                                         @onchange=@(e => mappingRule.MappingRule.ComparisionField = Convert.ToInt32(e.Value))>
                                     @for (int i = 1; i <= 4; i++)
                                     {
@@ -164,7 +164,7 @@
                                 </select>
                             </div>
                             <div class="col-md-auto">
-                                <select class="form-control form-control-sm"
+                                <select class="form-select form-select-sm"
                                         @onchange=@(e => mappingRule.MappingRule.ComparisionType = Convert.ToInt32(e.Value))>
                                     @for (int i = 1; i <= 4; i++)
                                     {
