--- a/OpenBudgeteer.Blazor/Pages/Transaction.razor
+++ b/OpenBudgeteer.Blazor/Pages/Transaction.razor
@@ -26,7 +26,7 @@
         }
     </div>
     <div class="col-md-auto">
-        <select class="form-control form-control-sm" style="width: auto" @onchange="@Filter_SelectionChanged">
+        <select class="form-select form-select-sm" style="width: auto" @onchange="@Filter_SelectionChanged">
             @foreach (var filter in Enum.GetValues<TransactionViewModelFilter>())
             {
                 if (filter == _dataContext.CurrentFilter)
@@ -65,7 +65,7 @@
                 </td>
                 <td>
 
-                    <select class="form-control form-control-sm" @onchange=@(e => _dataContext.NewTransaction.SelectedAccount = _dataContext.NewTransaction.AvailableAccounts.First(i => i.AccountId == Convert.ToInt32(e.Value)))>
+                    <select class="form-select form-select-sm" @onchange=@(e => _dataContext.NewTransaction.SelectedAccount = _dataContext.NewTransaction.AvailableAccounts.First(i => i.AccountId == Convert.ToInt32(e.Value)))>
                         @foreach (var account in _dataContext.NewTransaction.AvailableAccounts)
                         {
                             if (account.AccountId == _dataContext.NewTransaction.SelectedAccount.AccountId)
@@ -88,7 +88,7 @@
                         {
                             <tr>
                                 <td>
-                                    <select class="form-control form-control-sm" style="background-color: @ColorTranslator.ToHtml(bucket.SelectedBucket.Color)"
+                                    <select class="form-select form-select-sm" style="background-color: @ColorTranslator.ToHtml(bucket.SelectedBucket.Color)"
                                             @onchange=@((e) => bucket.SelectedBucket = bucket.AvailableBuckets.First(i => i.BucketId == Convert.ToInt32(e.Value)))>
                                         @foreach (var availableBucket in bucket.AvailableBuckets)
                                         {
@@ -140,7 +140,7 @@
                     <input class="form-control form-control-sm number-input" type="date" @bind="transaction.Transaction.TransactionDate" />
                 </td>
                 <td>
-                    <select class="form-control form-control-sm" @onchange=@(e => transaction.SelectedAccount = transaction.AvailableAccounts.First(i => i.AccountId == Convert.ToInt32(e.Value)))>
+                    <select class="form-select form-select-sm" @onchange=@(e => transaction.SelectedAccount = transaction.AvailableAccounts.First(i => i.AccountId == Convert.ToInt32(e.Value)))>
                         @foreach (var account in transaction.AvailableAccounts)
                         {
                             if (account.AccountId == transaction.SelectedAccount.AccountId)
@@ -163,7 +163,7 @@
                         {
                             <tr>
                                 <td>
-                                    <select class="form-control form-control-sm" style="background-color: @ColorTranslator.ToHtml(bucket.SelectedBucket.Color)"
+                                    <select class="form-select form-select-sm" style="background-color: @ColorTranslator.ToHtml(bucket.SelectedBucket.Color)"
                                             @onchange=@((e) => bucket.SelectedBucket = bucket.AvailableBuckets.First(i => i.BucketId == Convert.ToInt32(e.Value)))>
                                         @foreach (var availableBucket in bucket.AvailableBuckets)
                                         {
