--- a/OpenBudgeteer.Blazor/Shared/EditBucketDialog.razor
+++ b/OpenBudgeteer.Blazor/Shared/EditBucketDialog.razor
@@ -17,7 +17,7 @@
                      <div class="row">
                          <div class="col form-group">
                              <label>Bucket Type:</label>
-                             <select class="form-control form-control-sm" @onchange=@(e => DataContext.BucketVersion.BucketType = Convert.ToInt32(e.Value))>
+                             <select class="form-select form-select-sm" @onchange=@(e => DataContext.BucketVersion.BucketType = Convert.ToInt32(e.Value))>
                                  @foreach (var bucketType in DataContext.AvailableBucketTypes)
                                  {
                                      var position = DataContext.AvailableBucketTypes.IndexOf(bucketType) + 1;
@@ -34,7 +34,7 @@
                          </div>
 						  <div class="col form-group">
                              <label>Bucket Group:</label>
-                             <select class="form-control form-control-sm" @onchange=@(e => DataContext.Bucket.BucketGroupId = Convert.ToInt32(e.Value))>
+                             <select class="form-select form-select-sm" @onchange=@(e => DataContext.Bucket.BucketGroupId = Convert.ToInt32(e.Value))>
                                  @foreach (var bucketGroup in DataContext.AvailableBucketGroups)
                                  {
                                      if (bucketGroup.BucketGroupId == DataContext.Bucket.BucketGroupId)
@@ -66,7 +66,7 @@
                          </div>
                          <div class="col form-group">
                              <label>Color:</label>
-                             <select class="form-control form-control-sm" style="background-color: @ColorTranslator.ToHtml(DataContext.Bucket.Color)"
+                             <select class="form-select form-select-sm" style="background-color: @ColorTranslator.ToHtml(DataContext.Bucket.Color)"
                                      @onchange=@(e => DataContext.Bucket.ColorCode = Convert.ToString(e.Value) ?? Color.LightGray.Name)>
                                  @foreach (var color in DataContext.AvailableColors)
                                  {
