--- a/OpenBudgeteer.Blazor/Shared/NavMenu.razor
+++ b/OpenBudgeteer.Blazor/Shared/NavMenu.razor
@@ -1,6 +1,9 @@
 @using OpenBudgeteer.Core.Common.Database
 @using Microsoft.EntityFrameworkCore
+@using Microsoft.Extensions.DependencyInjection
+@using OpenBudgeteer.Core.Services
 @inject DbContextOptions<DatabaseContext> DbContextOptions
+@inject IServiceProvider Services
 
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="row" style="width: 1500px; margin: auto">
@@ -29,11 +32,34 @@
                         <span class="oi oi-box" aria-hidden="true"></span> Bucket
                     </NavLink>
                 </li>
-                <li class="nav-item">
-                    <NavLink class="nav-link" href="import">
-                        <span class="oi oi-data-transfer-upload" aria-hidden="true"></span> Import
-                    </NavLink>
-                </li>
+                @if (BankConnectionsActive)
+                {
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <span class="oi oi-data-transfer-upload" aria-hidden="true"></span> Import
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <NavLink class="dropdown-item" href="import">
+                                    <span class="oi oi-data-transfer-upload" aria-hidden="true"></span> File Import
+                                </NavLink>
+                            </li>
+                            <li>
+                                <NavLink class="dropdown-item" href="import-cloud">
+                                    <span class="oi oi-cloud-download" aria-hidden="true"></span> PSD2 Import
+                                </NavLink>
+                            </li>
+                        </ul>
+                    </li>
+                }
+                else
+                {
+                    <li class="nav-item">
+                        <NavLink class="dropdown-item" href="import">
+                            <span class="oi oi-data-transfer-upload" aria-hidden="true"></span> File Import
+                        </NavLink>
+                    </li>
+                }
                 <li class="nav-item">
                     <NavLink class="nav-link" href="report">
                         <span class="oi oi-bar-chart" aria-hidden="true"></span> Report
@@ -67,4 +93,5 @@
 
     public string CurrentDatabase => new DatabaseContext(DbContextOptions).Database.GetDbConnection().Database;
 
+    public bool BankConnectionsActive => Services.GetServices<IBankConnectionService>().Any();
 }
